[package]
name = "keynav-wayland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.15.12"
env_logger = "0.9.0"
log = "0.4.17"
memmap = "0.7.0"
rand = "0.8.5"
raqote = "0.8.1"
tempfile = "3.3.0"
wayland-client = "0.29.5"
wayland-commons = "0.29.5"
wayland-protocols = {version = "0.29.5", features = ["client", "unstable_protocols"]}
xkbcommon = "0.5.0"

[build-dependencies]
wayland-scanner = "0.29.5"
